# language.bindings

./: .gitignore  CMakeLists.txt  LICENSE  README  version.h.in
c/: CMakeLists.txt  Makefile  api.c  api.h
c/code/headers/clib/: clib.h
c/code/headers/dotslashzero/clib/: clib.h
c/code/sources/: clib.c
c/code/sources/dotslashzero/clib/: clib.c
c/test/: CMakeLists.txt  Makefile  test.c
cxx/: CMakeLists.txt  Makefile  api.cxx  api.hxx
cxx/code/headers/cxxlib/: cxxlib.hxx
cxx/code/headers/dotslashzero/cxxlib/: cxxlib.hxx
cxx/code/sources/: cxxlib.cxx
cxx/code/sources/dotslashzero/cxxlib/: cxxlib.cxx
cxx/test/: CMakeLists.txt  Makefile  test.cxx
dotnet/: CMakeLists.txt  api_dotnet.cxx  api_dotnet.hxx  assemblyinfo.cxx
dotnet/core/: CMakeLists.txt  dotnetcorelib.csproj.in
dotnet/core/code/: Address.cs  AssemblyInfo.cs  CLib.cs  Exception.cs  IGenerator.cs  Library.cs  Person.cs  Printer.cs
dotnet/core/test/: AssemblyInfo.cs  CMakeLists.txt  Program.cs  dotnetcorelib_test.csproj.in
dotnet/framework/: CMakeLists.txt
dotnet/framework/code/headers/dotslashzero/dotnetframeworklib/: dotnetframeworklib.hxx
dotnet/framework/code/sources/dotslashzero/dotnetframeworklib/: assemblyinfo.cxx  dotnetframeworklib.cxx
dotnet/framework/resources/: app.rc
dotnet/framework/test/: AssemblyInfo.cs  CMakeLists.txt  Program.cs  dotnetframeworklib_test.csproj.in
dotnet/test/: CMakeLists.txt
dotnet/test/test_dotnet_cs/: Program.cs
dotnet/test/test_dotnet_cs/Properties/: AssemblyInfo.cs
dotnet/test/test_dotnet_cxxcli/: assemblyinfo.cxx  program.cxx
dotnet/test/test_dotnet_vb/: Program.vb
dotnet/test/test_dotnet_vb/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
haskell/: CMakeLists.txt
haskell/HaskellModule/: Address.hs  Library.hs  Person.hs
haskell/test/: test.hs
java/: CMakeLists.txt  Makefile  build.bash
java/code/jar/net/dotslashzero/javalib/: Address.java  Core.java  IGenerator.java  JavaLibException.java  Library.java  Person.java  Printer.java
java/code/lib/headers/dotslashzero/javalib/: javalib.h
java/code/lib/sources/dotslashzero/javalib/: javalib.c
java/jni/: Makefile  api_java.cxx  api_java.hxx
java/net/dotslashzero/javalib/: Address.java  Core.java  IGenerator.java  JavaLibException.java  Library.java  Person.java  Printer.java
java/test/: CMakeLists.txt  Test.java  build_and_run.bash
nodejs/: CMakeLists.txt  api_nodejs.cxx  api_nodejs.hxx  nodejslib.js
nodejs/code/headers/dotslashzero/nodejslib/: nodejslib.h
nodejs/code/sources/dotslashzero/nodejslib/: nodejslib.c  nodejslib.js
nodejs/test/: CMakeLists.txt  test.js
objc/: CMakeLists.txt  Makefile  OLApi.h  OLApi.mm
objc/code/headers/dotslashzero/objclib/: ObjCLib.h
objc/code/sources/dotslashzero/objclib/: ObjCLib.m  ObjCLib.mm
objc/test/: CMakeLists.txt  Test.m  test.m
python/: CMakeLists.txt  api_python.cxx  api_python.hxx  pythonlib.py
python/code/headers/dotslashzero/pythonlib/: pythonlib.h
python/code/sources/dotslashzero/pythonlib/: pythonlib.c  pythonlib.py
python/test/: CMakeLists.txt  test.py
ruby/: CMakeLists.txt  api_ruby.cxx  api_ruby.hxx  rubylib.rb
ruby/test/: test.rb
swift/: CMakeLists.txt
swift/code/headers/dotslashzero/swiftlib/: bridgingheader.h
swift/code/sources/dotslashzero/swiftlib/: SwiftLib.swift
swift/resources/: Info.plist.in
swift/test/: CMakeLists.txt  Test.swift
