cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
project(Language_Bindings)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

if (APPLE)
    set(CMAKE_MACOSX_RPATH ${CMAKE_BINARY_DIR})
endif ()

option(LB_BUILD_C "Build C Library." ON)
option(LB_BUILD_CXX "Build C++ wrapper." OFF)
option(LB_BUILD_JAVA "Build Java wrapper." OFF)
# if (NOT MSVC)
#     option(LB_BUILD_OBJC "Build Objective-C wrapper." OFF)
# endif ()
if (MSVC)
    option(LB_BUILD_DOTNET "Build .NET wrapper." OFF)
endif ()
# option(LB_BUILD_PYTHON "Build Python wrapper." OFF)
# option(LB_BUILD_RUBY "Build Ruby wrapper." OFF)
# option(LB_BUILD_HASKELL "Build Haskell wrapper." OFF)
# option(LB_BUILD_NODEJS "Build Node.js wrapper." OFF)

if (NOT CMAKE_BUILD_TYPE OR "${CMAKE_BUILD_TYPE}" STREQUAL "")
    set(CMAKE_BUILD_TYPE "Release")
endif ()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

if (LB_BUILD_C)
    add_subdirectory(${CMAKE_SOURCE_DIR}/c)
endif ()

if (LB_BUILD_CXX)
    if (NOT LB_BUILD_C)
        message(FATAL_ERROR "C++ wrapper requires building C library.")
        return ()
    endif ()
    add_subdirectory(${CMAKE_SOURCE_DIR}/cxx)
endif ()

if (LB_BUILD_JAVA)
    if (NOT LB_BUILD_CXX)
        message(FATAL_ERROR "Java wrapper requires building C library and C++ wrapper.")
        return ()
    endif ()
    add_subdirectory(${CMAKE_SOURCE_DIR}/java)
endif ()

if (LB_BUILD_OBJC)
    if (NOT LB_BUILD_CXX)
        message(FATAL_ERROR "Objective-C wrapper requires building C library and C++ wrapper.")
        return ()
    endif ()
    add_subdirectory(${CMAKE_SOURCE_DIR}/objc)
endif ()

if (LB_BUILD_DOTNET)
    if (NOT LB_BUILD_CXX)
        message(FATAL_ERROR ".NET wrapper requires building C library and C++ wrapper.")
        return ()
    endif ()
    add_subdirectory(${CMAKE_SOURCE_DIR}/dotnet)
endif ()

if (LB_BUILD_PYTHON)
    if (NOT LB_BUILD_CXX)
        message(FATAL_ERROR "Python wrapper requires building C library and C++ wrapper.")
        return ()
    endif ()
    add_subdirectory(${CMAKE_SOURCE_DIR}/python)
endif ()

if (LB_BUILD_RUBY)
    if (NOT LB_BUILD_CXX)
        message(FATAL_ERROR "Ruby wrapper requires building C library and C++ wrapper.")
        return ()
    endif ()
    add_subdirectory(${CMAKE_SOURCE_DIR}/ruby)
endif ()

if (LB_BUILD_HASKELL)
    if (NOT LB_BUILD_C)
        message(FATAL_ERROR "Haskell wrapper requires building C library.")
        return ()
    endif ()
    add_subdirectory(${CMAKE_SOURCE_DIR}/haskell)
endif ()

if (LB_BUILD_NODEJS)
    if (NOT LB_BUILD_CXX)
        message(FATAL_ERROR "Node.js wrapper requires building C library and C++ wrapper.")
        return ()
    endif ()
    add_subdirectory(${CMAKE_SOURCE_DIR}/nodejs)
endif ()
